project completed in basic manner

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 <body>
     <main>
         <div class="quote-container">
-            <blockquote class="quote-text">
-                If you tell the truth, you don't have to remember anything.
+            <blockquote id="quote-text">
+                
             </blockquote>
-            <cite class="quote-author">Mark Twain</cite>
+            <cite id="quote-author"></cite>
             <div class="quote-btns">
-                <button id="twitter-btn" aria-label="Share on Twitter"><i class="fa-brands fa-x-twitter fa-lg"></i></button>
                 <button id="copy-btn" aria-label="Copy quote"><i class="fa-solid fa-copy fa-lg"></i></button>
                 <button id="new-quote-btn">New Quote</button>
             </div>
@@ -23,6 +22,7 @@
     </main>
     <!-- Script -->
     <script src="https://kit.fontawesome.com/f825b9fd10.js" crossorigin="anonymous"></script>
+    <script src="./datasets/quotes.jsonl"></script>
     <script src="./script.js" defer></script>
 </body>
 </html>
